--- a/robotclient/RobotClient/RobotClient.csproj
+++ b/robotclient/RobotClient/RobotClient.csproj
@@ -16,6 +16,8 @@
     <ProjectReference Include="..\..\sharelibrary\CommonLib\CommonLib.csproj" />
     <ProjectReference Include="..\..\sharelibrary\VDA5050Message\VDA5050Message.csproj" />
     <ProjectReference Include="..\ConfigApp\ConfigApp.csproj" />
+    <ProjectReference Include="..\Entity\Entity.csproj" />
+    <ProjectReference Include="..\LocalMemory\LocalMemory.csproj" />
     <ProjectReference Include="..\MqttService\MqttService.csproj" />
     <ProjectReference Include="..\RosNodeWrapper\RosNodeWrapper.csproj" />
   </ItemGroup>
