--- a/robotclient/RobotClient/ConfigApp/appsettings.json
+++ b/robotclient/RobotClient/ConfigApp/appsettings.json
@@ -16,5 +16,8 @@
   },
   "EndpointDefaults": {
     "Protocols": "Http1AndHttp2"
-  }
+  },
+  "PathStoreConfig": "XmlConfig/robotConfig.xml",
+  "RobotNameSpace": "Robot1",
+  "MqttClientId":  "Robot1"
 }
