feat(wrapper more for vda)

--- a/robotclient/RobotClient/ConfigApp/appsettings.json
+++ b/robotclient/RobotClient/ConfigApp/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "Kestrel": {
     "Endpoints": {
-      "ApiPM": {
-        "Url": "https://*:2060", // thiết lập cổng thay vì chạy cổng mặc định
+      "Api": {
+        "Url": "http://*:2060", // thiết lập cổng thay vì chạy cổng mặc định
         "Protocols": "Http1AndHttp2"
       }
     }
