--- a/robotclient/RosNodeWrapper/RosNodeWrapper.csproj
+++ b/robotclient/RosNodeWrapper/RosNodeWrapper.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\sharelibrary\CommonLib\CommonLib.csproj" />
-    <ProjectReference Include="..\..\sharelibrary\VDA5050Message\VDA5050Message.csproj" />
     <ProjectReference Include="..\ConfigApp\ConfigApp.csproj" />
+    <ProjectReference Include="..\VDA5050Message\VDA5050Message.csproj" />
   </ItemGroup>
 
 </Project>
