--- a/robotclient/RobotClient/RobotClient.csproj
+++ b/robotclient/RobotClient/RobotClient.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\sharelibrary\CommonLib\CommonLib.csproj" />
-    <ProjectReference Include="..\..\sharelibrary\VDA5050Message\VDA5050Message.csproj" />
+    <ProjectReference Include="..\VDA5050Message\VDA5050Message.csproj" />
     <ProjectReference Include="..\ConfigApp\ConfigApp.csproj" />
     <ProjectReference Include="..\Entity\Entity.csproj" />
     <ProjectReference Include="..\LocalMemory\LocalMemory.csproj" />
