--- a/roswrapper/VDAMissionClient/package.xml
+++ b/roswrapper/VDAMissionClient/package.xml
@@ -10,6 +10,15 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
+  <depend>rclcpp_action</depend>
+  <depend>pluginlib</depend>
+  <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>nav2_msgs</depend>
+  <depend>lifecycle_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>tf2</depend>
+  <depend>tf2_geometry_msgs</depend>
   <depend>vda5050_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
