fix(fix issue to run robotclient stable)

--- a/robotcontrolserver/RobotControlServer/ConfigApp/appsettings.json
+++ b/robotcontrolserver/RobotControlServer/ConfigApp/appsettings.json
@@ -9,7 +9,7 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://*:2006", // thiết lập cổng thay vì chạy cổng mặc định
+        "Url": "http://*:3006", // thiết lập cổng thay vì chạy cổng mặc định
         "Protocols": "Http1AndHttp2"
       }
     },
@@ -17,8 +17,5 @@
       "Protocols": "Http1AndHttp2"
     }
   },
-  "PortMqtt": 2010,
-  "ConnectionStrings": {
-    "DbConnectionString": "Host=192.168.1.93;Port=5432;Database=RCS;Username=postgres;Password=mds@123;"
-  }
+  "PortMqtt": 3011
 }
