--- a/robotclient/RobotClient/ConfigApp/appsettings.json
+++ b/robotclient/RobotClient/ConfigApp/appsettings.json
@@ -18,6 +18,6 @@
     "Protocols": "Http1AndHttp2"
   },
   "PathStoreConfig": "XmlConfig/robotConfig.xml",
-  "RobotNameSpace": "Robot1",
+  "RobotNameSpace": "",
   "MqttClientId":  "Robot1"
 }
