--- a/robotcontrolserver/BusinessLayer/BusinessLayer.csproj
+++ b/robotcontrolserver/BusinessLayer/BusinessLayer.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\sharelibrary\CommonLib\CommonLib.csproj" />
+    <ProjectReference Include="..\ApiObject\ApiObject.csproj" />
+    <ProjectReference Include="..\ConfigData\ConfigData.csproj" />
+    <ProjectReference Include="..\CuOptClientService\CuOptClientService.csproj" />
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\DbObject\DbObject.csproj" />
+    <ProjectReference Include="..\RobotControl\RobotControl.csproj" />
+    <ProjectReference Include="..\ShareMemoryData\ShareMemoryData.csproj" />
+    <ProjectReference Include="..\VDA5050Message\VDA5050Message.csproj" />
+  </ItemGroup>
+
 </Project>
