feat(CRUD, bla bla)

--- a/robotcontrolserver/ApiObject/ApiObject.csproj
+++ b/robotcontrolserver/ApiObject/ApiObject.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DbObject\DbObject.csproj" />
+  </ItemGroup>
+
 </Project>
