feat(vibe code for most of crud)

--- a/robotcontrolserver/RobotControlServer/ConfigApp/appsettings.Development.json
+++ b/robotcontrolserver/RobotControlServer/ConfigApp/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "PortMqtt": 3011,
+  "ConnectionStrings": {
+    "RobotDatabase": "Data Source=robotcontrol.db;Version=3;"
   }
 }
