--- a/robotcontrolserver/RobotControlServer/ConfigApp/appsettings.json
+++ b/robotcontrolserver/RobotControlServer/ConfigApp/appsettings.json
@@ -9,7 +9,7 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://*:3006", // thiết lập cổng thay vì chạy cổng mặc định
+        "Url": "http://*:3006",
         "Protocols": "Http1AndHttp2"
       }
     },
@@ -17,5 +17,8 @@
       "Protocols": "Http1AndHttp2"
     }
   },
-  "PortMqtt": 3011
+  "PortMqtt": 3011,
+  "ConnectionStrings": {
+    "RobotDatabase": "Data Source=robotcontrol.db;Version=3;"
+  }
 }
