--- a/robotcontrolserver/RobotControl/RobotControl.csproj
+++ b/robotcontrolserver/RobotControl/RobotControl.csproj
@@ -6,4 +6,22 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+		<PackageReference Include="Disruptor" Version="6.0.1" />
+		<PackageReference Include="MQTTnet" Version="5.0.1.1416" />
+		<PackageReference Include="MQTTnet.AspNetCore" Version="5.0.1.1416" />
+		<PackageReference Include="MQTTnet.AspNetCore.Routing" Version="0.4.43" />
+		<PackageReference Include="MQTTnet.Extensions.ManagedClient" Version="4.3.7.1207" />
+		<PackageReference Include="MQTTnet.Extensions.ManagedClient.Routing" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\sharelibrary\CommonLib\CommonLib.csproj" />
+    <ProjectReference Include="..\ApiObject\ApiObject.csproj" />
+    <ProjectReference Include="..\ConfigData\ConfigData.csproj" />
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\ShareMemoryData\ShareMemoryData.csproj" />
+    <ProjectReference Include="..\VDA5050Message\VDA5050Message.csproj" />
+  </ItemGroup>
+
 </Project>
