implement all other feature

--- a/robotcontrolserver/RobotControlServer/ConfigApp/appsettings.Development.json
+++ b/robotcontrolserver/RobotControlServer/ConfigApp/appsettings.Development.json
@@ -8,5 +8,12 @@
   "PortMqtt": 3011,
   "ConnectionStrings": {
     "RobotDatabase": "Data Source=robotcontrol.db;Version=3;"
+  },
+  "MqttClientConfig": {
+    "Endpoint": "127.0.0.1:3006",
+    "InterfaceName": "vda",
+    "MajorVersion": "2.1.0",
+    "Manufacturer": "Dhhhh-team",
+    "AgvControl": "AgvControl"
   }
 }
