--- a/robotcontrolserver/RobotControlServer/ConfigApp/appsettings.json
+++ b/robotcontrolserver/RobotControlServer/ConfigApp/appsettings.json
@@ -19,7 +19,7 @@
   },
   "PortMqtt": 3011,
   "ConnectionStrings": {
-    "RobotDatabase": "Data Source=robotcontrol.db;Version=3;"
+    "RobotDatabase": "Data Source=Database/ROBOTSERVER.db;Version=3;"
   },
   "MqttClientConfig": {
     "Endpoint": "127.0.0.1:3006",
