feat(import node edge)

--- a/robotcontrolserver/RobotControlServer/ConfigApp/appsettings.json
+++ b/robotcontrolserver/RobotControlServer/ConfigApp/appsettings.json
@@ -9,7 +9,7 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://*:3006",
+        "Url": "https://*:3006",
         "Protocols": "Http1AndHttp2"
       }
     },
