--- a/robotcontrolserver/RobotControlServer/ConfigApp/appsettings.json
+++ b/robotcontrolserver/RobotControlServer/ConfigApp/appsettings.json
@@ -27,5 +27,6 @@
     "MajorVersion": "2.1.0",
     "Manufacturer": "Dhhhh-team",
     "AgvControl": "AgvControl"
-  }
+  },
+  "CuOptUri": "http://192.168.1.64:8888"
 }
