fix(fix service build cuopt request)

--- a/robotcontrolserver/RobotControlServer/ConfigApp/appsettings.json
+++ b/robotcontrolserver/RobotControlServer/ConfigApp/appsettings.json
@@ -28,5 +28,5 @@
     "Manufacturer": "Dhhhh-team",
     "AgvControl": "AgvControl"
   },
-  "CuOptUri": "http://192.168.1.64:8888"
+  "CuOptUri": "http://localhost:8888"
 }
